Rewrote style.css to become mobile-friendly This took 2 days, had to relearn how to use em/rem over px, used vh/vw more sparingly for height only Took out really large px font sizes + gaps + internal paddings Took out useless image containers that messed up flexbox Made style2.css with chatgpt to see how to minimize things and then rewrote style.css as I learned what things did The really large gaps/internal paddings/px fixed widths really messed up responsiveness initially Big learning experience for sure

--- a/style.css
+++ b/style.css
@@ -1,23 +1,30 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Roboto", "Franklin Gothic Medium", Tahoma, sans-serif;
+}
+
 header {
     display: flex;
-    align-items: center;
     justify-content: space-between;
-    height: 75px;
+    align-items: center;
     background-color: #1F2937;
+    padding: 1em;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.5);
     position: fixed;
     width: 100%;
+    top: 0;
+    z-index: 999;
 }
 
 .header-logo {
-    width: 50px;
-    padding: 75px;
+    width: 3em;
 }
 
 .header-links {
     display: flex;
-    padding: 75px;
-    gap: 40px;
-    font-size: 25px;
+    gap: 2em;
 }
 
 a {
@@ -25,53 +32,44 @@ a {
     color: white;
 }
 
-body {
-    margin: 0;
-    font-family: "Roboto", "Franklin Gothic Medium", Tahoma, sans-serif;
-}
-
 .herotext {
     color: white;
-    padding-left: 75px;
-    font-size: 30px;
+    font-size: 1.5rem;
+    padding: 1em;
 }
 
 .HEROTEXTMAIN {
-    font-size: 100px;
+    font-size: 3rem;
     font-weight: 800;
 }
 
 p {
-    margin: 25px 0px;
+    margin: 1.5rem 0;
     text-align: center;
 }
 
 #who {
     display: flex;
     background-color: #1F2937;
-    justify-content: space-between;
-    padding-top: 75px;
-    padding-bottom: 75px;
+    justify-content: center;
     align-items: center;
-}
-
-.heroimage {
-    padding-right: 75px;
+    padding: 7rem 0 0;
+    gap: 2em;
 }
 
 .heropic {
-    height: 62vh;
+    max-width: 40%;
 }
 
 button {
     font-family: inherit;
-    font-size: 1.5em;
-    padding: 1vh 18vh;
+    font-size: 2rem;
+    padding: 1em 3em;
     background-color: rgb(47, 144, 255);
     color: white;
-    margin:0 auto;
+    margin: 0 auto;
     display:block;
-    border-radius: 25px;
+    border-radius: 1.5em;
     border: none;
 }
 
@@ -86,35 +84,65 @@ button:active {
 #what {
     display: flex;
     flex-direction: column;
-    background-color: white;
-    justify-content: space-between;
-    padding-top: 75px;
-    padding-bottom: 75px;
     align-items: center;
+    justify-content: center;
+    padding: 6em 0;
+    background-color: white;
 }
 
 .whattext {
-    font-size: 100px;
+    font-size: 4rem;
     font-weight: 800;
     color: #1F2937;
-    margin: 50px 0px;
+    text-align: center;
 }
 
 .boxes {
     display: flex;
-    gap: 100px;
     flex-wrap: wrap;
+    justify-content: center;
+    gap: 2em;
+}
+
+.box1,
+.box2,
+.box3,
+.box4 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #fff;
+    padding: 2em;
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 1);
+}
+
+.box1:hover,
+.box2:hover,
+.box3:hover,
+.box4:hover {
+    transform: translateY(-20px);
+    transition: transform 0.4s cubic-bezier(0.29, 3.31, 0.41, -0.45);
+}
+
+.box1:active,
+.box2:active,
+.box3:active,
+.box4:active {
+    transform: translateY(-20px);
+    transition: transform 0.4s cubic-bezier(0.29, 3.31, 0.41, -0.45);
 }
 
 .whatimagetext {
-    font-size: 35px;
     color: #1F2937;
-    font-weight: 800;
-        margin: 50px 0px;
+    font-weight: bold;
+    margin: 1.5rem 0 0;
 }
 
 .whatimage {
-    border-radius: 25px;
+    width: 80px;
+    object-fit: contain;
+    border-radius: 40px;
     box-shadow: 0px 0px 0px 3px rgba(148,0,211,1),
 0px 0px 0px 6px rgba(75,0,130,1),
 0px 0px 0px 9px rgba(0,0,255,1),
@@ -125,38 +153,45 @@ button:active {
 }
 
 #why {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     background-color: #e5e7eb;
-    padding-top: 150px;
-    padding-bottom: 150px;
+    padding: 7em 0 0;
+    height: 100vh;
+    gap: 2em;
 }
 
 .quote {
-    font-size: 36px;
+    font-size: 1.5rem;
     color: #1f2937;
-    margin: auto;
-    width: 50%;
+    width: 75%;
     font-style: italic;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .quoteauthor {
-    font-size: 36px;
+    font-size: 1.5rem;
     color: #1f2937;
     text-align: end;
-    padding-right: 50vh;
     font-weight: 900;
+    padding-right: 1em;
 }
 
 .bonus {
-    font-size: 10px;
+    font-size: 0.75rem;
     color: #1f2937;
     text-align: end;
-    padding-right: 50vh;
+    padding-right: 2em;
+    position: relative;
+    top: -2.5em;
 }
 
 .lastbutton {
     font-family: inherit;
-    font-size: 1.5em;
-    padding: 1vh 18vh;
+    font-size: 1.5rem;
+    padding: 1em 2em;
     background-color: rgb(47, 144, 255);
     color: white;
     margin:0;
@@ -167,41 +202,91 @@ button:active {
 
 #how {
     display: flex;
-    flex-direction: column;
-    background-color: white;
-    justify-content: space-between;
-    padding-top: 150px;
-    padding-bottom: 150px;
+    justify-content: center;
+    align-content: center;
+    background-color: rgb(47, 144, 255);
+    padding: 7em 2em;
     align-items: center;
+    height: 100vh;
 }
 
 .howcontainer {
     background-color: rgb(47, 144, 255);
     display: flex;
-    gap: 250px;
-    padding: 75px;
-    border-radius: 25px;
+    border-radius: 1.5em;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    text-align: center;
+    gap: 5em;
+    
 }
 
 .textleft1 {
     font-weight: 800;
     color: white;
-    font-size: 45px;
+    font-size: 2rem;
 }
 
 .textleft2 {
     color: white;
-    font-size: 35px;
+    font-size: 1.5rem;
 }
 
 footer {
     display: flex;
     flex-direction: column;
     background-color: #1F2937;
-    justify-content: space-between;
-    padding-top: 115px;
-    padding-bottom: 115px;
+    justify-content: center;
     align-items: center;
+    padding: 7em 0;
     color: white;
-    font-size: 40px;
+    font-size: 2rem;
+    text-align: center;
+    height: 100vh;
+    gap: 1em;
+}
+
+@media screen and (max-width: 600px) {
+    #who {
+            flex-direction: column;
+        }
+
+    .heropic {
+                max-width: 100%;
+            }
+}
+
+@media screen and (min-width: 1280px) {
+    #who, #what, #why, #how {
+        height: 100vh;
+    }
+    .HEROTEXTMAIN, .quote {
+        font-size: 4em;
+    }
+    .whatimagetext {
+        margin: 3rem;
+        font-size: 3em;
+    }
+    .whattext {
+        font-size: 6em;
+        padding-bottom: 1em;
+    }
+    .whatimage {
+        width: 200px;
+    }
+    .quoteauthor {
+        font-size: 3rem;
+        padding-right: 3em;
+    }
+    .bonus {
+        font-size: 1.5;
+        padding-right: 12em;
+    }
+    .textleft1 {
+        font-size: 5rem;
+    }
+    .textleft2 {
+        font-size: 3rem;
+    }
 }
